Implement some of the offchain functions